--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -37,4 +37,71 @@
         android:layout_below="@+id/btn_start"
         android:layout_alignLeft="@+id/btn_start"
         android:layout_alignStart="@+id/btn_start" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView2"
+        android:layout_below="@+id/imageView"
+        android:src="@drawable/beach" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="T"
+        android:id="@+id/btn_move"
+        android:layout_below="@+id/imageView2"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="R"
+        android:id="@+id/btn_rotate"
+        android:layout_below="@+id/imageView2"
+        android:layout_toRightOf="@+id/btn_move"
+        android:layout_toEndOf="@+id/btn_move" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="S"
+        android:id="@+id/btn_scale"
+        android:layout_alignTop="@+id/btn_rotate"
+        android:layout_toRightOf="@+id/btn_rotate"
+        android:layout_toEndOf="@+id/btn_rotate" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="A"
+        android:id="@+id/btn_alpha"
+        android:layout_below="@+id/imageView2"
+        android:layout_toRightOf="@+id/btn_scale"
+        android:layout_toEndOf="@+id/btn_scale" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="C1"
+        android:id="@+id/btn_set1"
+        android:layout_below="@+id/imageView2"
+        android:layout_toRightOf="@+id/btn_alpha"
+        android:layout_toEndOf="@+id/btn_alpha" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="C2"
+        android:id="@+id/btn_set2"
+        android:layout_below="@+id/imageView2"
+        android:layout_toRightOf="@+id/btn_set1"
+        android:layout_toEndOf="@+id/btn_set1" />
 </RelativeLayout>
